create db with Users table

--- a/Tutor.Server.API/appsettings.json
+++ b/Tutor.Server.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "TutorDbConnection": "Server=LAPTOP-LJAH9CH6\\SQLEXPRESS;Database=TutorDb;User=tutor;Password=P@sswd;Trust Server Certificate = True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
