--- a/Tutor.Server.API/nlog.config
+++ b/Tutor.Server.API/nlog.config
@@ -11,8 +11,11 @@
 	<targets>
 		<target xsi:type="File" name="serverError" fileName="C:\Users\pawel\OneDrive\Pulpit\My\MyProgramming\logs\tutor\internalServerErrors\nlog-${shortdate}.log"
 				layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}"/>
+		<target xsi:type="File" name="databaseError" fileName="C:\Users\pawel\OneDrive\Pulpit\My\MyProgramming\logs\tutor\databaseErrors\nlog-${shortdate}.log"
+				layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}"/>
 	</targets>
 	<rules>
 		<logger name="Tutor.Server.API.Middleware.ErrorHandlingMiddleware" minLevel="Error" writeTo="serverError"/>
+		<logger name="Tutor.Server.Infrastructure.Repositories.*" minLevel="Error" writeTo="databaseError"/>
 	</rules>
 </nlog>
