login for good credentials implementation

--- a/Tutor.Server.API/appsettings.json
+++ b/Tutor.Server.API/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "AuthenticationSettings": {
+    "JwtKey": "PRIVATE_KEY_DONT_SHARE",
+    "JwtIssuer": "http://tutor.com",
+    "JwtExpireDays": 15
+  },
   "ConnectionStrings": {
     "TutorDbConnection": "Server=LAPTOP-LJAH9CH6\\SQLEXPRESS;Database=TutorDb;User=tutor;Password=P@sswd;Trust Server Certificate = True"
   },
