--- a/Tutor.Server.Application/Tutor.Server.Application.csproj
+++ b/Tutor.Server.Application/Tutor.Server.Application.csproj
@@ -10,11 +10,14 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.3" />
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="7.0.1" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.25.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.21.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Tutor.Server.Domain\Tutor.Server.Domain.csproj" />
     <ProjectReference Include="..\Tutor.Shared.Dtos\Tutor.Shared.Dtos.csproj" />
+    <ProjectReference Include="..\Tutor.Shared.Exceptions\Tutor.Shared.Exceptions.csproj" />
   </ItemGroup>
 
 </Project>
