--- a/Tutor.Shared.Dtos/Tutor.Shared.Dtos.csproj
+++ b/Tutor.Shared.Dtos/Tutor.Shared.Dtos.csproj
@@ -1,8 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Sieve" Version="3.0.0-beta0015" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Tutor.Shared\Tutor.Shared.csproj" />
+  </ItemGroup>
 
 </Project>
