--- a/Tutor.Shared/Tutor.Shared.csproj
+++ b/Tutor.Shared/Tutor.Shared.csproj
@@ -1,12 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Tutor.Shared\Tutor.Shared.csproj" />
-  </ItemGroup>
 
 </Project>
