--- a/Tutor.MobileUI/Tutor.MobileUI.csproj
+++ b/Tutor.MobileUI/Tutor.MobileUI.csproj
@@ -60,4 +60,16 @@
 	  </MauiXaml>
 	</ItemGroup>
 
+	<ItemGroup Condition="'$(TargetFramework)' == 'net7.0-android'">
+	  <PackageReference Include="DevExpress.Maui.CollectionView">
+	    <Version>22.2.4</Version>
+	  </PackageReference>
+	  <PackageReference Include="DevExpress.Maui.Controls">
+	    <Version>22.2.4</Version>
+	  </PackageReference>
+	  <PackageReference Include="DevExpress.Maui.Editors">
+	    <Version>22.2.4</Version>
+	  </PackageReference>
+	</ItemGroup>
+
 </Project>
