--- a/Tutor.Mobile.ViewModels/Tutor.Mobile.ViewModels.csproj
+++ b/Tutor.Mobile.ViewModels/Tutor.Mobile.ViewModels.csproj
@@ -22,7 +22,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\Tutor.Client.Logic\Tutor.Client.Logic.csproj" />
 	  <ProjectReference Include="..\Tutor.Shared.Dtos\Tutor.Shared.Dtos.csproj" />
+	  <ProjectReference Include="..\Tutor.Shared.Validators\Tutor.Shared.Validators.csproj" />
 	</ItemGroup>
 
 </Project>
