implement succesfull login proccess

--- a/Tutor.Mobile.ViewModels/Tutor.Mobile.ViewModels.csproj
+++ b/Tutor.Mobile.ViewModels/Tutor.Mobile.ViewModels.csproj
@@ -22,6 +22,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\Tutor.Client.APIAccess.Abstractions\Tutor.Client.APIAccess.Abstractions.csproj" />
 	  <ProjectReference Include="..\Tutor.Client.Logic\Tutor.Client.Logic.csproj" />
 	  <ProjectReference Include="..\Tutor.Shared.Dtos\Tutor.Shared.Dtos.csproj" />
 	  <ProjectReference Include="..\Tutor.Shared.Validators\Tutor.Shared.Validators.csproj" />
