add navigation to registration page

--- a/Tutor.MobileUI/Tutor.MobileUI.csproj
+++ b/Tutor.MobileUI/Tutor.MobileUI.csproj
@@ -64,6 +64,9 @@
 	  <MauiXaml Update="Pages\LoginPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\RegistrationPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="StartShell.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
