translation for login dto validator

--- a/Tutor.Server.Application/Tutor.Server.Application.csproj
+++ b/Tutor.Server.Application/Tutor.Server.Application.csproj
@@ -20,6 +20,7 @@
     <ProjectReference Include="..\Tutor.Server.Domain\Tutor.Server.Domain.csproj" />
     <ProjectReference Include="..\Tutor.Shared.Dtos\Tutor.Shared.Dtos.csproj" />
     <ProjectReference Include="..\Tutor.Shared.Exceptions\Tutor.Shared.Exceptions.csproj" />
+    <ProjectReference Include="..\Tutor.Shared.Helpers\Tutor.Shared.Helpers.csproj" />
   </ItemGroup>
 
 </Project>
