add MyAdvertisementsPage to flyout

--- a/Tutor.MobileUI/Tutor.MobileUI.csproj
+++ b/Tutor.MobileUI/Tutor.MobileUI.csproj
@@ -67,6 +67,9 @@
 	  <MauiXaml Update="Pages\LoginPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\MyAdvertisementsPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\RegistrationPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
