disaply my advertisements in collection view

--- a/Tutor.Shared/Tutor.Shared.csproj
+++ b/Tutor.Shared/Tutor.Shared.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NetEscapades.EnumGenerators" Version="1.0.0-beta07" />
+  </ItemGroup>
+
 </Project>
