change login process on mobile client side

--- a/Tutor.Client.Maui/Tutor.Client.Maui.csproj
+++ b/Tutor.Client.Maui/Tutor.Client.Maui.csproj
@@ -12,4 +12,8 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+	</ItemGroup>
+
 </Project>
