add logged in user context service

--- a/Tutor.Client.Logic/Tutor.Client.Logic.csproj
+++ b/Tutor.Client.Logic/Tutor.Client.Logic.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Tutor.Shared.Dtos\Tutor.Shared.Dtos.csproj" />
     <ProjectReference Include="..\Tutor.Shared.Helpers\Tutor.Shared.Helpers.csproj" />
   </ItemGroup>
 
