display user icon in flyout

--- a/Tutor.MobileUI/Tutor.MobileUI.csproj
+++ b/Tutor.MobileUI/Tutor.MobileUI.csproj
@@ -59,6 +59,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Controls\ProfileImage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\AdvertisementDetailsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
